[package]
name = "step2stl"
version = "0.1.0"
description = "Utility to convert STEP files to STL files, without the fuss"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/beeb/step2stl"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
