[package]
name = "step2stl"
version = "0.1.3"
description = "Utility to convert STEP files to STL files, without the fuss"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/beeb/step2stl"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1"
dunce = "1"
home = "0.5"
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cxx = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
