[package]
name = "step2stl"
version = "0.1.3"
description = "Utility to convert STEP files to STL files, without the fuss"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/beeb/step2stl"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cxx-build = "1"
dunce = "1"
home = "0.5"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
cxx = "1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
